[gd_scene load_steps=14 format=2]

[ext_resource path="res://Images/xehanort.png" type="Texture" id=1]
[ext_resource path="res://RetroFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Attachments/Attachments.gd" type="Script" id=3]
[ext_resource path="res://RetroFont_Black.tres" type="DynamicFont" id=4]
[ext_resource path="res://Images/211871_pause_icon.png" type="Texture" id=5]
[ext_resource path="res://Images/3695059_music_play_play button_player_icon.png" type="Texture" id=6]
[ext_resource path="res://Images/326639_download_file_icon.png" type="Texture" id=7]
[ext_resource path="res://Attachments/AudioShoutOut_Yuri Lowenthal_329_P825551613.mp3" type="AudioStream" id=8]
[ext_resource path="res://Images/134221_refresh_reload_repeat_update_arrow_icon.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.054902, 0.054902, 0.054902, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.00392157, 0.14902, 0.584314, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.682353, 0.682353, 0.682353, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.682353, 0.682353, 0.682353, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.682353, 0.682353, 0.682353, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="Node" type="Node"]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 507, 270.781 )
scale = Vector2( 0.13739, 0.14046 )
texture = ExtResource( 1 )

[node name="Panel2" type="Panel" parent="."]
margin_top = 2.0
margin_right = 1024.0
margin_bottom = 34.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 5.0
margin_top = 12.0
margin_right = 309.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
text = "Windows Media Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="."]
margin_top = 509.0
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 993.0
margin_top = 8.0
margin_right = 1018.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="Control"]
margin_left = 282.0
margin_top = 521.0
margin_right = 346.0
margin_bottom = 585.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="TextureButton" parent="Control"]
margin_left = 410.0
margin_top = 521.0
margin_right = 474.0
margin_bottom = 585.0
disabled = true
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayButton" type="TextureButton" parent="Control"]
margin_left = 538.0
margin_top = 521.0
margin_right = 602.0
margin_bottom = 585.0
disabled = true
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownloadButton" type="TextureButton" parent="Control"]
margin_left = 666.0
margin_top = 521.0
margin_right = 730.0
margin_bottom = 585.0
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Control/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="Control/ReplayButton" to="." method="_on_ReplayButton_pressed"]
[connection signal="pressed" from="Control/DownloadButton" to="." method="_on_DownloadButton_pressed"]
